Add java opts to project.clj file.